# rust-syslog

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: format.rs  tests.rs
