[package]
name = "syslog"
version = "7.0.0"
edition = "2021"
authors = [ "contact@geoffroycouprie.com" ]
description = "Syslog message formatter and writer, supporting unix sockets, UDP and TCP exporters"
license = "MIT"
repository = "https://github.com/Geal/rust-syslog"
documentation = "https://docs.rs/syslog"
keywords = ["syslog", "logs", "logging"]

[dependencies]
hostname = { version = "0.4" }
libc = { version = "0.2.112" }
log = { version = "0.4.8", features = [ "std" ] }
time = { version = "0.3.5", features = ["local-offset", "formatting"] }
